--- a/B505-Final-Exam/MST-student.ipynb
+++ b/B505-Final-Exam/MST-student.ipynb
@@ -686,6 +686,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Q7"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 105,
    "metadata": {},
@@ -718,6 +725,42 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Q6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Pseudocode - \n",
+    "\n",
+    "Given N x N board of characters, from a randomly chosen grid point, there are 8 possible directions to traverse.  \n",
+    "(1)Up, (2)Down, (3)Left, (4)Right, (5)Top right, (6)Top left, (7)Bottom right, (8)Bottom left.  \n",
+    "\n",
+    "```\n",
+    "For row in range(N) # O(N)\n",
+    "    For column in range(N)  # O(N)\n",
+    "        grid point index = (row,col) \n",
+    "        For each word in the given set of N words, # O(N)\n",
+    "            - Traverse in all 8 directions on the board of characters from the grid point, \n",
+    "                for a total distance (in each direction) equalling the length of the word to be found.   \n",
+    "            - Ensure the program(crawler) remains within the bounds of the board. \n",
+    "            - Use brute force technique to make character comparisons \n",
+    "            - Worst case number of character comparisons to be made, per word, per grid point, \n",
+    "                accoutning for all 8 directions is 8 x len(word)\n",
+    "``` \n",
+    "\n",
+    "Therefore, worst case time complexity is $O(N \\times N \\times N \\times 8 \\times len(longest\\ word)) \\approx O(N^3)$, assuming $len(longest\\ word) << N,\\ and\\ N >> 8$\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
