answered more questions

--- a/B505-Final-Exam/MST-student.ipynb
+++ b/B505-Final-Exam/MST-student.ipynb
@@ -31,6 +31,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Programming Problem 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Part 1\n",
     "\n",
     "You must work with the provided data structures.\n",
@@ -681,45 +688,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Q2\n",
+    "\n",
+    "Let the c deleted edges be e_1, e_2, e_3,....e_c, where   \n",
+    "e_1 is the edge between node u_1 and v_1 with cost, cost_1  \n",
+    "e_2 is the edge between node u_2 and v_2 with cost, cost_2\n",
+    ".\n",
+    ".\n",
+    ".\n",
+    "e_c is the edge between node u_c and v_c with cost, cost_c\n",
+    "\n",
+    "Starting from node s, run Dijkstra’s algorithm on the subgraph H to get shortest path between nodes s and u_1,u_2,u_3,...u_c and store these values as su_1,su_2,su_3....su_c, respectively.   \n",
+    "In general, represent these as su_i where i ranges from 1 to c.  \n",
+    "Based on the hint, this is an O(mlogn) operation where m is the number of edges in H and n is the number of vertices in G.\n",
+    "\n",
+    "Starting from node t, run Dijkstra’s algorithm on the subgraph H to get shortest path between nodes s and v_1,v_2,v_3,...v_c and store these values as sv_1,sv_2,sv_3....sv_c, respectively.  \n",
+    "In general, represent these as sv_i where i ranges from 1 to c.  \n",
+    "Based on the hint, This is an O(mlogn) operation where m is the number of edges in H and n is the number of vertices in G.\n",
+    "\n",
+    "The goal now is to add back an edge e_1/e_2/....or e_c such that we get the shortest path possible between s and t. This is equivalent to minimizing the total cost su_i + e_i + sv_i for all i between 1 and c.  \n",
+    "This is an O(n) operation where n is the number of elements of the list, the maximum of which is to be found. Here, the number of elements in the list is c.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Q 11\n",
     "Given an L table, the length of the LCS is given by the value at the bottom right of the table. In this case, the value at the bottom right is 6. Therefore the length of the LCS is 6."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Q7"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calc(n): \n",
-    "    k=0 #O(1)\n",
-    "    i = n/2 #O(1)\n",
-    "    while(i<=n): #since i is incrementing by 1 each time, this has to run a maximum (worst case) of n/2 times as it starts from n/2\n",
-    "        i=i+1 #O(1)\n",
-    "        j=2 #O(1)\n",
-    "        #since j is incrementing by a factor of 2 each time, the remaining interval decreases by a factor of 2. \n",
-    "        # Thus this has worse case time complexity of O(logn)\n",
-    "        while(j<=n):\n",
-    "            j=j*2 #O(1)\n",
-    "            k = k + n/2 #O(1)\n",
-    "    return k,counter"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Therefore, \n",
-    "* The time complexity of the above function is $O(1) + O(1) + O(n/2 \\times logn \\times 1 \\times 1) \\approx O(nlogn)$\n",
-    "* The value of k :  \n",
-    "    A value of $n/2$ gets added to k (starting from 0), $nlogn$ times. Therefore, $k \\approx O(n^2logn)$  "
    ]
   },
   {
@@ -754,6 +750,188 @@
     "\n",
     "Therefore, worst case time complexity is $O(N \\times N \\times N \\times 8 \\times len(longest\\ word)) \\approx O(N^3)$, assuming $len(longest\\ word) << N,\\ and\\ N >> 8$\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Q7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 311,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc(n): \n",
+    "    k=0 #O(1)\n",
+    "    i = n/2 #O(1)\n",
+    "    while(i<=n): #since i is incrementing by 1 each time, this has to run a maximum (worst case) of n/2 times as it starts from n/2\n",
+    "        i=i+1 #O(1)\n",
+    "        j=2 #O(1)\n",
+    "        #since j is incrementing by a factor of 2 each time, the remaining interval decreases by a factor of 2. \n",
+    "        # Thus this has worse case time complexity of O(logn)\n",
+    "        while(j<=n):\n",
+    "            j=j*2 #O(1)\n",
+    "            k = k + n/2 #O(1)\n",
+    "    return k"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Therefore, \n",
+    "* The time complexity of the above function is $O(1) + O(1) + O(n/2 \\times logn \\times 1 \\times 1) \\approx O(nlogn)$\n",
+    "* The value of k :  \n",
+    "    A value of $n/2$ gets added to k (starting from 0), $nlogn$ times. Therefore, $k \\approx O(n^2logn)$  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Q8\n",
+    "\n",
+    "1. Merge sort always splits the array into two equal halves while quick sort doesn't necessarily split into two equal halves. Instead it splits in a ratio based on the pivot location\n",
+    "2. Time complexity of quick sort is $O(N^2)$ whereas time complexity of merge sort is $O(NlogN)$\n",
+    "3. Merge sort is a stable sorting algorithm while quick sort is unstable.\n",
+    "4. Since merge sort is a recursive algorithm, it can be memory ineffiecient and perform have a large recursive stack\n",
+    "5. Quick sort is an inplace sorting (memory efficient) whereas merge sort requires additional memory to store the sorted elements.\n",
+    "\n",
+    "\n",
+    "Why merge sort is better for linked lists.\n",
+    "\n",
+    "In linked lists, the elements to be sorted are not stored in adjacent memory locations (unlike an array).  \n",
+    "To access an element in the ith position in a linked list, we have to start from the head element and sequentially travel each and every node until we reach the ith position as we don’t have a continuous block of memory (having which, would have made quick random access possible).  \n",
+    "\n",
+    "Quick Sort requires a lot of access to different memory locations (randomly, not sequentially).  Therefore, quick sort used on linked list is slow and heavy.   \n",
+    "On the other hand, merge sort accesses data sequentially and the need for random access is low, which makes it very suitable for linked lists.\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Q9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 322,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Boyer Moore (from the assignment)\n",
+    "def find_boyer_moore(T, P):\n",
+    "    \"\"\"\n",
+    "    Boyer-moore string matching algorithm returns\n",
+    "    the first index of the matching substring P in string T.\n",
+    "    \"\"\"\n",
+    "    n, m = len(T), len(P)\n",
+    "    if m == 0:\n",
+    "        return 0\n",
+    "    #key is letter, value is index. Reading from the end. So last letter will have index 0\n",
+    "    last = {}\n",
+    "    for k in range(m):\n",
+    "        last[P[k]] = k\n",
+    "    #i is for text, reading from the end of pattern.\n",
+    "    i = m-1\n",
+    "    #k is for the pattern, reading from the end of pattern.\n",
+    "    k = m-1\n",
+    "    \n",
+    "    count = 0\n",
+    "    \n",
+    "    while i < n:\n",
+    "        # If match, decrease i,k\n",
+    "        count += 1\n",
+    "        if T[i] == P[k]:\n",
+    "            if k == 0:\n",
+    "                return i,count\n",
+    "            else:\n",
+    "                i -= 1\n",
+    "                k -= 1\n",
+    "        # Not match , reset the positions\n",
+    "        else:\n",
+    "            #check if the element in the text which didn't match the pattern is elsewhere in the pattern. Get that position\n",
+    "            j = last.get(T[i], -1)\n",
+    "            #shift the entire pattern if j = -1 or shift until the matching character in the text.\n",
+    "            i += m - min(k, j+1)\n",
+    "            #k reset to end of pattern.\n",
+    "            k = m-1\n",
+    "    return -1,count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 323,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CTGC matches GCATGACTGCGTGACC starting at index 6. The total number of comparisons made are 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"GCATGACTGCGTGACC\"   \n",
+    "p = \"CTGC\"\n",
+    "\n",
+    "index,compare = find_boyer_moore(s,p)\n",
+    "print(f\"{p} matches {s} starting at index {index}. The total number of comparisons made are {compare}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "s = “GCATGACTGCGTGACC\"   \n",
+    "p = “CTGC\"\n",
+    "\n",
+    "Booyer Moore Step by Step\n",
+    "\n",
+    "- Read from the end of the pattern (pattern_index=3, letter C) and corresponding position of the string (string_index=3, letter T). \n",
+    "- Check if the letters match\n",
+    "- The two letters don't match. Number of comparisons made so far = 1\n",
+    "- Mismatch occurs between p's C and s's T. \n",
+    "- Check if T is present in p. \n",
+    "- It is. Get the position of T in p using the lookup table created at the beginning of the program (Named `last`). It is at position 1 of the pattern\n",
+    "- Now the pattern is shifted so that CTGC comes under ...ATGA... of the string.  \n",
+    "\n",
+    "This completes the first iteration of the algorithm \n",
+    "\n",
+    "- Start from the end of the pattern again (pattern_index=3, letter C) and check if the letter C of p matches with letter A of s (string_index=5, letter A).  \n",
+    "- The two letters don't match. Number of comparisons made so far = 2\n",
+    "- Mismatch occurs between p's C and s's A. \n",
+    "- Check if G is present in p. \n",
+    "- It is not. So shift the entire pattern by the length of the pattern.\n",
+    "- Now the pattern is shifted so that CTGC comes under ...CTGC... of the string. \n",
+    "\n",
+    "This completes the second iteration of the algorithm\n",
+    "\n",
+    "- Start from the end of the pattern again (pattern_index=3, letter C) and check if the letter C of p matches with letter C of s (string_index=9, letter A). \n",
+    "- The two letters match. Number of comparisons made so far = 3. Continue such comparisons.\n",
+    "- G of p (pattern_index=2) matches with G (string_index=8) of s. Number of comparisons made so far = 4\n",
+    "- T of p (pattern_index=2) matches with T (string_index=7) of s. Number of comparisons made so far = 5\n",
+    "- C of p (pattern_index=2) matches with C (string_index=6) of s. Number of comparisons made so far = 6\n",
+    "\n",
+    "This completes the algorithm. Output the string index and the number of comparisons made.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Q10"
    ]
   },
   {
@@ -841,6 +1019,13 @@
     "A = [15,15,15]\n",
     "target_sum = 45\n",
     "print(f\"Does subset with sum {target_sum} exist in {A}?\",does_subset_with_sum_exist(A, target_sum))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Programming Problem 2"
    ]
   },
   {
